# Cpp-mc-chunk-gen

./: .gitignore  CMakeLists.txt  Makefile  README.md  anvil.h  benchmark.bat  benchmark.sh  build-no-admin.bat  build-no-admin.sh  build.bat  build.sh  chunkgen_offline.cpp  compress_mca.py  cuda_mock.h  generator.cu  generator.h  main.cpp  make-no-admin.bat  make-no-admin.sh  make.bat  make.sh  nbt.h  noise_simd.h  setup_server.sh  vulkan_backend.h
.github/workflows/: release.yml
gui/: api_handler.cpp  api_handler.h  gui_main.cpp  http_server.cpp  http_server.h
gui/webui/: app.js  index.html  style.css
gui/webui/tabs/: benchmark.js  compress.js  generator.js  inspector.js  server.js
mod/mcchunkgen/: README.md  build.gradle  gradle.properties  settings.gradle
mod/mcchunkgen/bridge/: Makefile  jni_bridge.c
mod/mcchunkgen/src/main/java/io/openhands/mcchunkgen/: ChunkGenWorker.java  McChunkGen.java  NativeChunkBridge.java  NativeChunkControl.java
mod/mcchunkgen/src/main/java/io/openhands/mcchunkgen/mixin/: ChunkGeneratorMixin.java  NativeChunkMixin.java
mod/mcchunkgen/src/main/resources/: fabric.mod.json  mcchunkgen.mixins.json
shaders/: chunk_gen.comp
